# ost-ai-engine

./: .actrc  .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  PR.md  PR.txt  README.md  dagster_run.yaml  docker-compose.yml  log.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  reco.txt  requirements.txt  schema.sql  test_api.db  test_single_user_evaluation.py  turbo.json
.github/workflows/: ci.yml
apps/ost-backend-runner/: package.json
data/: processed_repositories.csv  repo_list.txt  repo_list2.txt  repo_list_4k.txt  repo_list_8k copy.txt  repo_list_8k.txt  repo_list_test.txt
docs/: API_DOCUMENTATION.md  README.md  api_testing.md  recommendation_engine.md  testing_strategy.md
docs/api/: examples.md  go-api.md
docs/architecture/: overview.md
docs/database/: Conception.md  dictionnaire.md  mcd.md  schema.md
docs/datas/: Conception.md  Dictionnaire de données.md
docs/deployment/: ci-cd.md  environment.md  github-secrets.md  go-api-setup.md  quick-start.md
docs/ml-pipeline/: overview.md
docs/recomandations/: good_project.md  good_user.md
docs/testing/: act-local-testing.md  dbt-test-models.md  overview.md  pytest-best-practices.md  scripts.md
models/: project_embeddings.npy  project_embeddings_metadata.pkl  user_embedding_metadata.pkl  user_embeddings.npy
notebooks/: data_preprocessing.ipynb  eda_github_repositories.ipynb  ml_training_pipeline.ipynb
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619  pg_internal.init
postgres-data/base/16384/: 2619  pg_internal.init
postgres-data/base/16499/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13454  13454_fsm  13454_vm  13458  13459  13459_fsm  13459_vm  13463  13464  13464_fsm  13464_vm  13468  13469  13469_fsm  13469_vm  13473  16511  16517  16519  16521  16523  16530  16531  16533  16539  16540  (+264 more)
postgres-data/base/5/: 1247  1247_vm  1249  1249_vm  1255  1255_vm  1259  1259_vm  16406  16419  16460  16478  16480  16492  16493  16494  16495  16496  16498  2579  2604  2606  2606_vm  2608  2608_vm  2609  2609_vm  2610  2610_vm  2619  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  (+19 more)
postgres-data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
postgres-data/pg_xact/: 0000
scripts/: README.md  create_tables.py  fetch_repo_list.py  find_user_with_interactions.py  migrate_schema.py  migrate_schema_v2.py  migrate_schema_v3.py  populate_db.py  populate_test_data.py  populate_test_data_simple.py  populate_test_data_v2.py  scraping.py  setup_dbt.py  setup_test_data_fallback.py  simulate_user_interactions.py  start_mlflow_ui.py  test_dbt_models.py
scripts/database/: README.md  clean_tables.sql  create_tables.py  create_test_users.py  fetch_repo_list.py  populate_reference_data.py  populate_reference_tables.py  recreate_schema.py  recreate_schema.sql  scraping.py  simulate_projects.py  simulate_users.py
scripts/tests/: ci_local.py  test_single_user_evaluation.py
src/api/: README.md  main.py
src/api/go/: Dockerfile  config.go  db.go  go.mod  handlers.go  recommendations.go  router.go
src/application/services/: project_data_loader.py  recommendation.py  recommendation_service.py  user_interest_profile.py
src/application/use_cases/: run_training_pipeline.py
src/dbt/: .user.yml  dbt_project.yml  profiles.yml
src/dbt/models/: embed_USERS.sql  ml_project_embeddings.sql  sources.yml  user_project_similarities.sql
src/dbt/models/staging/: github_to_project.sql
src/dbt/models/test/: schema.yml  test_projects.sql  test_similarities.sql  test_users.sql
src/domain/models/: schema.py
src/infrastructure/: config.py  logger.py
src/infrastructure/analysis/: feature_engineer.py  model_persistence_service.py  similarity_calculator.py
src/infrastructure/cache/: __init__.py  redis_cache_service.py
src/infrastructure/celery/: celery_app.py  tasks.py
src/infrastructure/monitoring/: __init__.py  metrics_service.py  middleware.py
src/infrastructure/pipeline/: __init__.py
src/infrastructure/pipeline/dagster/: __init__.py  definitions.py
src/infrastructure/pipeline/dagster/assets/: dbt.py  embedding_assets.py  github_assets.py  reference_assets.py  similarity_assets.py  user_embedding_assets.py
src/infrastructure/pipeline/dagster/resources/: embedding_service.py  github_client.py
src/infrastructure/postgres/: data_loader.py  database.py
src/infrastructure/scraping/: github_scraper.py
src/infrastructure/services/: mlflow_model_persistence.py  mlflow_service.py
src/infrastructure/services/go/github-scraper/: .golangci.yml  Makefile  README.md  db_upsert.go  go.mod  go.sum  main.go  scraper.go
tests/: conftest.py  setup_test_db.py  test_basic.py  test_similarity.py
tests/integration/: __init__.py  test_api_recommendations.py  test_cache.py  test_dbt_models.py  test_similarity.py  test_training_pipeline.py
tests/performance/: __init__.py  test_api_performance.py
tests/unit/: __init__.py  test_basic.py  test_config.py  test_env.py  test_feature_engineer.py  test_services.py
tests/unit/infrastructure/: test_config.py
tests/unit/infrastructure/analysis/: test_model_persistence_service.py
tests/unit/infrastructure/postgres/: test_data_loader.py  test_database.py
tests/unit/infrastructure/scraping/: test_github_scraper.py
transform/: .user.yml  dbt_project.yml  profiles.yml
transform/models/: embed_USERS.sql
transform/models/staging/: github_raw_to_project.sql  raw_github_repositories.sql
